Promote Blake3ChunkVectorWide to a shipped kernel and update dispatch logic for preferred-width kernel selection